# Version_Definitiva_Render

./: Dockerfile  EMPEZAR_AQUI.bat  README.md  cambios_ojito_handicap.txt  data.json  errores.txt  iniciar_local.bat  instruccionesgeminicli.txt  logs.txt  prediccion.txt  render.yaml  requirements.txt  resumen_trabajo.txt
Modelo que si funciona/Descarga_Todo/: data.json
Modelo que si funciona/Descarga_Todo/data/: data.json
Modelo que si funciona/Descarga_Todo/src/templates/partials/: analysis_panel.html
modelo_a_replicar_render/: data.json
modelo_a_replicar_render/src/: app.py
modelo_a_replicar_render/src/modules/: estudio_scraper.py
modelo_a_replicar_render/src/templates/: estudio.html  index.html
modelo_a_replicar_render/src/templates/partials/: analysis_panel.html
nowgoal-streamlit-main/: setup.sh
playwright_stub/: pyproject.toml
playwright_stub/render_playwright_stub/: cli.py
scripts/: run_scraper.py  scraping_logic.py
src/: app.py
src/modules/: estudio_scraper.py
src/static/css/: responsive.css
src/templates/: estudio.html  index.html
src/templates/partials/: analysis_panel.html
