[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "render-playwright-stub"
version = "0.1.0"
description = "Stub CLI for Playwright commands when browsers are not needed."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "NowGoal Deploy"}]
dependencies = []

[project.scripts]
playwright = "render_playwright_stub.cli:main"
